--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -8,7 +8,7 @@
 
   <form>
   <p>Your name is {{name}}</p>
-  <input type="text" [(ngModel)]="name">
+  <input type="text" name="item" [(ngModel)]="name">
   </form>
   <button type="button" (click)="addToCart(product)">Buy</button>
 </div>
