--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="product">
   <h3>{{ product.name }}</h3>
-  <h4>{{ product.price | currency }}</h4>
+  <h4>{{ product.price | currency:'4.3-8' }}</h4>
   <p>{{ product.description }}</p>
  
 
