--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -20,7 +20,7 @@
 </button>
 <app-product-alerts
   (notify)="onNotify()"
-  product="{{product}}">
+  [product]="product">
 </app-product-alerts>
 
 </div>
